outputs/tsp_constructive-constructive/2025-09-19_00-14-35/evaluations/problem_eval4829882524405759172_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance as progress increases (weight_connectivity: 0.3+0.2, weight_centrality: 0.2), with dynamic weights adjusted by exploration_factor and progress_factor.}
                                                                                                                                                                     ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance as progress increases (weight_connectivity: 0.3+0.2, weight_centrality: 0.2), with dynamic weights adjusted by exploration_factor and progress_factor.}
                                                                                                                                                                     ^
SyntaxError: unmatched '}'
